[tool.poetry]
name = "git-tracker"
version = "0.1.0"
description = "A tool to aggregate and export git logs"
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"
packages = [{include = "git_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
ell-ai = "^0.0.5"
pydantic = "^2.9.1"
markdown = "^3.7"
openai = "^1.45.0"
anthropic = "^0.34.2"
typer = "^0.12.5"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
git-tracker = "git_tracker.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=git_tracker"
testpaths = ["git_tracker", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
